--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
    <body>
       <video width="100%" height=auto autoplay loop>
-          <source src="ocean.mp4" type="video/mp4">
+          <source src="https://raw.githubusercontent.com/romariohiennguyen/testvideo/main/ocean.mp4" type="video/mp4">
       </video>
    </body>
 </html>
